# sengine-jump-king

./: .gitmodules  CMakeLists.txt  main.cpp
datafiles/resources/assets/texture/player/: bump.asset  idle.asset  idle_look_up.asset  jump_downwards.asset  jump_prepare.asset  jump_upwards.asset  land_fail.asset  walk_1.asset  walk_2.asset  walk_3.asset
include/entities/: player.hpp
src/entities/: player.cpp
